# libsnark-tutorial

src/: CMakeLists.txt  miximus.cpp  mul_cmp.cpp  mul_cmp.hpp  test-knowledge-of-preimage.cpp  test.cpp  test_cmp.cpp
src/ethereum/contracts/: Verifier.sol
src/ethereum/test/: TestVerifier.js
